--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-stars": "^2.2.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
